--- a/DEmo2/DEmo2/index.html
+++ b/DEmo2/DEmo2/index.html
@@ -11,7 +11,7 @@
         <script src="Scripts/script.js"></script>
         <link href="Styles.css" rel="stylesheet" />
 </head>
-<body>
+<body >
 <table style="font-family: Arial">
     <tr>
         <td colspan="2" class="header">
@@ -22,9 +22,9 @@
     </tr>
     <tr>
         <td class="leftMenu">
-            <a href="#/home">Home</a>
-            <a href="#/courses">Courses</a>
-            <a href="#/students">Students</a>
+            <a href="#!home">Home</a>
+            <a href="#!courses">Courses</a>
+            <a href="#!students">Students</a>
         </td>
         <td class="mainContent">
             <ng-view></ng-view>
